feat: added whole app
